// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UserItem /> should render when administrator=false] 1`] = `
<Item__StyledUserItem
  to="/administration/users/bob"
>
  <Identicon
    hash="foobar"
    size={32}
  />
  <strong>
    bob
  </strong>
</Item__StyledUserItem>
`;

exports[`<UserItem /> should render when administrator=true] 1`] = `
<Item__StyledUserItem
  to="/administration/users/bob"
>
  <Identicon
    hash="foobar"
    size={32}
  />
  <strong>
    bob
  </strong>
  <Label
    color="purple"
  >
    <Icon
      faStyle="fas"
      fixedWidth={false}
      name="user-shield"
    />
     Administrator
  </Label>
</Item__StyledUserItem>
`;
